--- a/templates/driver_info.html
+++ b/templates/driver_info.html
@@ -54,27 +54,27 @@
   <caption>Personal Information</caption>
   <tr>
     <th>Driver Name</th>
-    <td>{{ driver_info[0]['Driver Name'] }}</td>
+    <td>{{ driver_info[0]['driver_name'] }}</td>
   </tr>
   <tr>
       <th>Abbreviation</th>
-      <td>{{ driver_info[0]['Abbreviation'] }}</td>
+      <td>{{ driver_info[0]['abbreviation'] }}</td>
   </tr>
   <tr>
     <th>Team</th>
-    <td>{{ driver_info[0]['Team'] }}</td>
+    <td>{{ driver_info[0]['team'] }}</td>
   </tr>
   <tr>
     <th>Start Time</th>
-    <td>{{ driver_info[0]['Start time'] }}</td>
+    <td>{{ driver_info[0]['start_time'] }}</td>
   </tr>
   <tr>
     <th>End Time</th>
-    <td>{{ driver_info[0]['End time'] }}</td>
+    <td>{{ driver_info[0]['end_time'] }}</td>
   </tr>
   <tr>
-    <th>Best Lap Time</th>
-    <td>{{ driver_info[0]['Best Lap Time'] }}</td>
+    <th>best_lap_time</th>
+    <td>{{ driver_info[0]['best_lap_time'] }}</td>
   </tr>
 </table>
 {% else %}
