--- a/templates/report.html
+++ b/templates/report.html
@@ -65,9 +65,9 @@
         </tr>
         {% for driver_id, info in report %}
         <tr>
-            <td>{{ info['Driver Name'] }}</td>
-            <td>{{ info['Team'] }}</td>
-            <td>{{ info['Best Lap Time'] }}</td>
+            <td>{{ info['driver_name'] }}</td>
+            <td>{{ info['team'] }}</td>
+            <td>{{ info['best_lap_time'] }}</td>
         </tr>
         {% endfor %}
     </table>
